<resources>
    <string name="dev_info">OtakuBinge - developed by Mikaila Smith &amp; Donovan Wilder - 2017</string>
    <string name="copyright_info">This app utilizes the AniList API (&#169; 2014) developed by Josh Star</string>
    <string name="app_name">OtakuBinge</string>
    <string name="duration">Duration: </string>
    <string name="episodes">Episodes: </string>
    <string name="total_binge_time">Total binge time: </string>
    <string name="completion_date">Complete binge by: </string>
    <string name="calculate">Calculate</string>
    <string name="episode_a">episodes a</string>
    <string name="starting_date">Starting date: </string>
    <string name="alert_low_free_time"> Not enough free time.</string>
    <string name="no_episodes_alert">Add number of episodes</string>
    <string name="raw_binge_time">Raw Binge Time:</string>
    <string-array name="time_frequency">
        <item>Day</item>
        <item>Week</item>
    </string-array>
</resources>
